Responsive styles To fix: restaurant-container content to wrap properly for devices up to 600px

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,42 +2,43 @@
 /* CSS Document */
 
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position:relative;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
 }
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+  color: #3397db;
+  text-decoration: none;
 }
 a img{
-	border: none 0px #fff;
+  border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  width: 100vw;
 }
 #footer {
   background-color: #444;
@@ -54,6 +55,9 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
@@ -64,6 +68,7 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  padding-top: 10%;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -109,6 +114,9 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 .filter-options h2 {
   color: white;
@@ -117,6 +125,11 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
+
+label {
+  visibility: hidden;
+}
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
@@ -136,7 +149,12 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
@@ -180,6 +198,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  overflow: hidden;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -205,7 +224,8 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
+  padding-top: 10px;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +238,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,14 +254,22 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  width: 45%;
 }
+
+#restaurant-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -258,7 +286,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -266,10 +294,65 @@ nav h1 a {
   padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+}
+/* ====================== Responsive ====================== */
+@media only screen and (max-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+  header nav {
+    order: 0;
+  }
+  header #breadcrumb {
+    order: 1;
+    padding-right: 0;
+    padding-left: 0;
+    width: 100vw;
+    text-align: center;
+  }
+  .inside {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+  }
+  .inside header {
+    order: 0;
+    width: 100vw;
+  }
+  .inside #map-container {
+    order:2;
+    position: relative;
+    width: 100vw;
+    top: 130px;
+    height: 300px;
+  }
+  .inside #restaurant-container {
+    order: 3;
+    position: relative;
+    margin: auto;
+    width: 100vw; 
+    text-align: center;
+    padding-top: 140px;
+  }
+  .inside #reviews-container {
+    width: 100vw;
+    margin: auto;
+    padding: 10px;
+  }
+  .inside #footer {
+    order: 4;
+    width: 100vw;
+    padding: 10px;
+  }
+
 }
